Now new red alert will be printed only if there are new district(s) relative to previous alert, that means that alerts will be less confusing
Signed-off-by: Roy Ash <roy.ash456@gmail.com>